--- a/argus/extension/manifest.json
+++ b/argus/extension/manifest.json
@@ -11,8 +11,7 @@
     "scripting"
   ],
   "host_permissions": [
-    "http://localhost:3000/*",
-    "http://127.0.0.1:3000/*"
+    "<all_urls>"
   ],
   "background": {
     "service_worker": "background.js",
