--- a/argus/.env.example
+++ b/argus/.env.example
@@ -50,6 +50,8 @@ EVOLUTION_PG_PORT=5432
 EVOLUTION_PG_DATABASE=evolution
 EVOLUTION_PG_USER=postgres
 EVOLUTION_PG_PASSWORD=postgres
+# Schema where Evolution API Prisma tables live (default: evolution_api)
+# EVOLUTION_PG_SCHEMA=evolution_api
 
 # ===========================================
 # Docker Compose Overrides (optional)
