--- a/argus/.gitignore
+++ b/argus/.gitignore
@@ -5,6 +5,11 @@ dist/
 *.log
 data/*.db
 data/db/
+data/backups/
+data/dead-letter.jsonl
+data/dead-letter.jsonl.old
+data/failed-reminders.jsonl
+data/failed-reminders.jsonl.old
 logs/
 .DS_Store
 *.sqlite
