--- a/argus/extension/manifest.json
+++ b/argus/extension/manifest.json
@@ -9,7 +9,8 @@
     "storage",
     "activeTab",
     "scripting",
-    "sidePanel"
+    "sidePanel",
+    "alarms"
   ],
   "host_permissions": [
     "<all_urls>"
