feat: add Elastic Agent Builder MCP agentic chat integration
- New src/mcp-client.ts: JSON-RPC 2.0 client for Elastic Agent Builder MCP endpoint.
  Exports initMcpClient, fetchMcpTools (5-min cache), callMcpTool, isMcpConfigured,
  getMcpStatus. Uses ApiKey auth and fetchWithTimeout (10s per call).
- gemini.ts: added GeminiMessage interface, callGeminiWithTools() with tool_choice:auto,
  _geminiChatWithContextMcp() agentic loop (max 5 iterations), CHAT_MCP_SYSTEM_PROMPT.
  chatWithContext() Tier-1 dispatcher routes to MCP path when isMcpConfigured().
- server.ts: MCP init in bootstrap(), GET /api/mcp-status, mcpConfigured in /api/health,
  POST /api/chat skips bulk getAllEvents() when MCP active and resolves event IDs individually.
- .env.example: ELASTIC_MCP_URL documented as commented-out optional block.
- README.md, ARCH.md, CHANGELOG.md: full documentation of MCP integration.

--- a/argus/.env.example
+++ b/argus/.env.example
@@ -58,7 +58,12 @@ EVOLUTION_PG_PASSWORD=postgres
 # ===========================================
 ELASTIC_CLOUD_ID=your_cloud_id_here
 ELASTIC_API_KEY=your_api_key_here
-ELASTIC_MCP_URL=https://your-project.kb.region.gcp.elastic.cloud/api/agent_builder/mcp
+# Elastic Agent Builder MCP endpoint (optional)
+# When set, /api/chat uses an agentic loop: Gemini calls MCP tools to query
+# Elasticsearch directly instead of embedding all events in the prompt.
+# Requires 'feature_agentBuilder.read' Kibana privilege on ELASTIC_API_KEY.
+# Format: https://<project>.kb.<region>.gcp.elastic.cloud/api/agent_builder/mcp
+# ELASTIC_MCP_URL=
 
 # ===========================================
 # Docker Compose Overrides (optional)
